Bug 478087 - Poor ranking of search results
Summary: Poor ranking of search results
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-12-04 21:57 UTC by Alessandro Astone
Modified: 2024-02-03 05:19 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
gnome-abrt desktop file (8.17 KB, text/plain)
2023-12-05 12:35 UTC, Alessandro Astone
Details
kickoff favourites (138.85 KB, image/png)
2023-12-26 23:52 UTC, Alessandro Astone
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Astone 2023-12-04 21:57:22 UTC
Example 1:
Search "sddm".
The first result is "Run sddm", the second result is "Login Screen (SDDM) - Configure Login Manager" (what i wanted)
In Plasma 5.27 this was the other way around.
This is a big deal. Running the `sddm` process could cause issues.

Example 2:
Start typing "pr"... with the intent of launching "Problem Reporting" (gnome-abrt)
The first result is "Problem Reporting", good.
Add an "o" to spell "pro"...
The first result is "Konsole", the second result is "Discover", the third result is "Problem Reporting".
In Plasma 5.27 "Problem Reporting" was ranked first, with Discover following and Konsole further down

I feel like krunner search ranking had improved massively in the recent plasma versions, and this is a significant step-down.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora KDE Rawhide
(available in About System)
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Natalie Clarius 2023-12-04 22:37:24 UTC
Can't reproduce the behavior for your case 1 on 5.27; the command match showed before the system settings match for me already before.

The gnome problem reporting thing is an application? I can't find any package for it on Arch.
Comment 2 Alessandro Astone 2023-12-04 22:42:05 UTC
(In reply to Natalie Clarius from comment #1)
> Can't reproduce the behavior for your case 1 on 5.27; the command match
> showed before the system settings match for me already before.

Weird. On a fresh Fedora install in KVM, and in both my Fedora 39 daily-driver machines i see the kcm before the command

> The gnome problem reporting thing is an application? I can't find any
> package for it on Arch.

Yes, the binary is /usr/bin/gnome-abrt
Comment 3 Alexander Lohnau 2023-12-05 06:18:35 UTC
Can you please attach the desktop file of the problem reporting app?
Comment 4 Alexander Lohnau 2023-12-05 06:21:23 UTC
>Can't reproduce the behavior for your case 1 on 5.27; the command match showed before the system settings match for me already before.

Yeah, that would be the expected behavior due to that being considered an exact match. I am not sure what a better solution might be, because sddm seems like a special case
Comment 5 Alessandro Astone 2023-12-05 12:35:27 UTC
Created attachment 163901 [details]
gnome-abrt desktop file
Comment 6 Nate Graham 2023-12-12 22:31:29 UTC
This appears to be fixed as of today.
Comment 7 Alessandro Astone 2023-12-26 15:27:22 UTC
I get the same behaviour with beta 2, on an old user as well as on a fresh user
Comment 8 Alexander Lohnau 2023-12-26 19:12:23 UTC
Okay, will look into reproducing the issue
Comment 9 Alexander Lohnau 2023-12-26 21:15:00 UTC
Can you please add a screenshot of your favorites? They should be visible in the kicker launcher.

I suspect the issue is that the system monitor is a favorite and thus it is ranked higher, or at least it gets a boost. Though the code doesn't seem to have changed in that regard from Plasma 5.27.
Comment 10 Alessandro Astone 2023-12-26 23:52:43 UTC
Created attachment 164459 [details]
kickoff favourites
Comment 11 Alessandro Astone 2023-12-26 23:53:49 UTC
(In reply to Alexander Lohnau from comment #9)
> Can you please add a screenshot of your favorites? They should be visible in
> the kicker launcher.
> 
> I suspect the issue is that the system monitor is a favorite and thus it is
> ranked higher, or at least it gets a boost. Though the code doesn't seem to
> have changed in that regard from Plasma 5.27.

system monitor is not involved in my description, but indeed konsole and discover are favourites and get ranked higher than gnome-abrt when querying "pro"
Comment 12 Alexander Lohnau 2023-12-27 05:43:24 UTC
Forgot to mention that I was able to reproduce the issue, but in my case it was system monitor which was above.

But the issue is exactly the same, system monitor has the keyword "PROcess" and discover "PROgram" ;)
Comment 13 Bug Janitor Service 2024-01-02 15:03:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3739
Comment 14 Alexander Lohnau 2024-01-29 18:00:44 UTC
Git commit 4a38561c4c0301ee1ecf72710bf31eaf7d56c920 by Alexander Lohnau.
Committed on 29/01/2024 at 18:00.
Pushed by alex into branch 'master'.

runners/services: Give favorites a relative instead of absolute boost, some cleanups and optimizations

M  +0    -1    runners/services/autotests/servicerunnertest.cpp
M  +25   -32   runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4a38561c4c0301ee1ecf72710bf31eaf7d56c920
Comment 15 Alexander Lohnau 2024-01-29 18:34:16 UTC
Git commit 6351be5aa74afbed4dea6e12d7107ec410e06212 by Alexander Lohnau.
Committed on 29/01/2024 at 18:34.
Pushed by alex into branch 'Plasma/6.0'.

runners/services: Give favorites a relative instead of absolute boost, some cleanups and optimizations


(cherry picked from commit 4a38561c4c0301ee1ecf72710bf31eaf7d56c920)

M  +0    -1    runners/services/autotests/servicerunnertest.cpp
M  +25   -32   runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6351be5aa74afbed4dea6e12d7107ec410e06212