runners/services: Give favorites a relative instead of absolute boost, some cleanups and optimizations

BUG: 478087